--- a/EI Quiz.html
+++ b/EI Quiz.html
@@ -1258,7 +1258,7 @@
             let currentQuestion = 0;
             let userAnswers = [];
             let timerInterval;
-            let timeLeft = 30 * 60; // 30 minuti in secondi
+            let timeLeft = 20 * 60; // 20 minuti in secondi
             let userData = {
                 fullName: "",
                 birthDate: "",
@@ -1741,7 +1741,7 @@
                     // Funzione per verificare la password
                     function checkPassword() {
                         // La password corretta (cambiala con quella che preferisci)
-                        const correctPassword = "EI2025";
+                        const correctPassword = "MMPI2025";
                         
                         if (passwordInput.value === correctPassword) {
                             // Reindirizza alla pagina se la password è corretta
